# voxstuff

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
data/shaders/: simple.fragment  simple.vertex  voxel.fragment  voxel.vertex
src/: CMakeLists.txt  main.cpp  vox.cpp  vox.hpp
src/gfx/: camera.cpp  camera.hpp  forward.hpp  node.cpp  node.hpp  object.cpp  object.hpp  scene.cpp  scene.hpp  shader.cpp  shader.hpp
